--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
   "name": "node-xprinter-sdk",
-  "version": "1.0.0",
+  "version": "1.0.0-dev-3",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "CuongTL",
   "license": "MIT",
   "devDependencies": {
-    "node-gyp": "^10.2.0"
+    "node-gyp": "9.4.0"
   },
   "dependencies": {
-    "ffi-napi": "^4.0.3",
+    "ffi-rs": "^1.0.90",
+    "nodejs-xprinter-sdk": "^1.0.0-dev-2",
     "ref-napi": "^3.0.3",
     "ref-wchar-napi": "^1.0.3"
   }
